updated method of collecting production for new input of production from lathe production calender

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -48,6 +48,7 @@
         </button>
       </div>
       <h5 class="bold short">{{day}}</h5>
+      <app-production-day [mach]="machine" [editMode]="editMode" [date]="year+'-'+monthHold+'-'+day"></app-production-day>
     </div>
   </div>
 </div>
