able to add production using lathe calender form placeholders

--- a/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
+++ b/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
@@ -19,5 +19,5 @@
 </h5>
 <div *ngIf="editMode && !prod">
   <h6 class="small-break"><br></h6>
-  <app-production-quantity [quantity]="0"  [mach]="mach"></app-production-quantity>
+  <app-production-quantity [quantity]="0" [date]="date" [mach]="mach"></app-production-quantity>
 </div>
