updated calender style

--- a/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
+++ b/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.html
@@ -17,7 +17,10 @@
     <h6 class="in-button">Add</h6>
   </button>
 </h5>
-<div *ngIf="editMode && !prod">
-  <h6 class="small-break"><br></h6>
+<div *ngIf="editMode && !prod && shift !='Day'">
+  <p class="small-break"></p>
+  <app-production-quantity [shift]="shift" [quantity]="0" [date]="date" [mach]="mach"></app-production-quantity>
+</div>
+<div *ngIf="editMode && !prod && shift =='Day'">
   <app-production-quantity [shift]="shift" [quantity]="0" [date]="date" [mach]="mach"></app-production-quantity>
 </div>
