--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,8 +1,9 @@
 <h2 class="bold">{{machine.machine}}</h2>
-<div class="grid2">
+<div class="grid25">
   <h3>Day Shift Average: <br><strong>{{dayAvg}}</strong></h3>
   <h3>Night Shift Average: <br><strong>{{nightAvg}}</strong></h3>
   <h3>Over Night Average: <br><strong>{{overNightAvg}}</strong></h3>
+  <h3>Full Day Average: <br><strong>{{overNightAvg+nightAvg+dayAvg}}</strong></h3>
 </div>
 <div class="grid50split">
     <h3>Parts Made On Machine: <br><strong>{{machTotal}}</strong></h3>
