--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -20,6 +20,11 @@
     </div>
     <h3>Parts Made To Operation: <br><strong>{{total}}</strong></h3>
 </div>
+<div class="middle grid100">
+  <button (click)="addOldWeek()" class="btn btn-primary">
+    Show Previous week
+  </button>
+</div>
 <div class="grid">
   <div class="border"><h5 class="bold">{{days[0]}}</h5></div>
   <div class="border"><h5 class="bold">{{days[1]}}</h5></div>
