added capability to get jobs not initially displayed in machine edit

--- a/frontend/src/app/machine/machine-edit/machine-edit.component.html
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.html
@@ -16,6 +16,7 @@
             {{job}}
           </option>
       </select>     
+      <a *ngIf="moreJobs" (click)="addJobs()">Show More Jobs</a>
     </div>
     <div class="form-group">
       <label for="currentOp">Op</label>
