cleaned up and documented machine new component

--- a/frontend/src/app/machine/machine-new/machine-new.component.html
+++ b/frontend/src/app/machine/machine-new/machine-new.component.html
@@ -49,6 +49,6 @@
         Cancel
       </button>
       <br><br>
-      <div *ngIf="isError">
-        <h3 class="danger">{{error}}</h3>
+      <div *ngIf="isError" class="error">
+        <h3>{{error}}</h3>
       </div>
