fixed machine edit for use with hourly production job update

--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.html
@@ -28,8 +28,8 @@
                 </div>
                 <h2>{{mach.machine}}</h2>
                 <h5 *ngIf="hourServ.startTimes[i].length > 0">Start Time: <strong>{{hourServ.startTimes[i]}}</strong></h5>
-                <h3>Job: <strong>{{mach.currentJob}}</strong></h3>
-                <h3><br><br>Op: <strong>{{mach.currentOp}}</strong></h3><br>
+                <h3>Job: <br><strong>{{mach.currentJob}}</strong>
+                <br>Op: <br><strong>{{mach.currentOp}}</strong></h3>
                 <div *ngIf="mach.currentOp !== 'None'" class="btn-grid">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
