fixed hourly up-time percentage calculation

--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div *ngIf="editMulti[i]">
-        <app-hourly-edit [id]="lot.id"></app-hourly-edit>
+        <app-hourly-edit [id]="lot.id" [startTime]="startTime"></app-hourly-edit>
     </div>
 </li>
