Added logo to footer

--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -4,6 +4,9 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-0 col-md-offset-0">
       <p>©2019 My Production Status</p>
+      <div routerLink='/'  class="logo">
+        <img src="../../assets/favicon.png" width="50px">
+      </div>
     </div>
   </div>
 </div>
