Updated styling of registration and login error handling, and footer

--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -3,10 +3,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-12 col-sm-offset-0 col-md-offset-0">
-      <p>©2019 My Production Status</p>
-      <div routerLink='/'  class="logo">
+      <div routerLink='/'  class="right logo">
         <img src="../../assets/favicon.png" width="50px">
       </div>
+      <p>©2019 My Production Status</p>
     </div>
   </div>
 </div>
