updated part styling

--- a/frontend/src/app/part/part-find/part-find-show/part-find-show.component.css
+++ b/frontend/src/app/part/part-find/part-find-show/part-find-show.component.css
@@ -12,8 +12,14 @@
 
 h3{
     text-align: center;
+    margin: auto;
 }
 
 h2{
     text-align: center;
+    margin: auto;
+}
+
+li{
+    height: 160px;
 }
