added machine current job and op to lathe production calender

--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.html
@@ -1,4 +1,8 @@
-<h2 class="bold">{{machine.machine}}</h2>
+<div class="grid33">
+  <h2 class="centered">Machine<br><strong>{{machine.machine}}</strong></h2>
+  <h2 class="centered">Job<br><strong>{{machine.currentJob}}</strong></h2>
+  <h2 class="centered">Operation<br><strong>{{machine.currentOp}}</strong></h2>
+</div>
 <div class="grid25">
   <h3>Day Shift <br> Average: <br><strong>{{dayAvg}}</strong></h3>
   <h3>Night Shift <br> Average: <br><strong>{{nightAvg}}</strong></h3>
