--- a/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
+++ b/frontend/src/app/production/production-by-machine/production-calender/production-calender.component.css
@@ -23,6 +23,16 @@
     grid-template-columns: 37% 26% 37%;
 }
 
+.grid33 { 
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+}
+
+.grid3366 { 
+    display: grid;
+    grid-template-columns: 33.3% 66.6%;
+}
+
 .grid100{
     display: grid;
     grid-template-columns: 100%;
