updated styling in change log

--- a/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
+++ b/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
@@ -1,4 +1,4 @@
-<h2>{{model}}</h2>
+<h2 class="centered">{{model}} Changes</h2>
   <ul class='list-group'>
     <li class=list-group-item *ngFor="let log of set">
       <h5>Changed ID: <strong>{{log.id}}</strong></h5>
