--- a/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
+++ b/frontend/src/app/shared/change-log/change-log-set/change-log-set.component.html
@@ -1,4 +1,7 @@
-<h2 class="centered">{{model}} Changes</h2>
+<h2 class="centered">
+  {{model}} Changes
+</h2>
+<div class="grid2 col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
   <ul class='list-group'>
     <li class=list-group-item *ngFor="let log of set">
       <h5>Changed ID: <strong>{{log.id}}</strong></h5>
@@ -45,3 +48,4 @@
       Show More
     </button>
   </div>
+</div>
