home component with boilerplate for reusable job/maching fetching

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=700">
 <app-header></app-header>
+<app-home></app-home>
 <div class="border" *ngIf="auth.isNew">
     <app-tutorial></app-tutorial>
 </div>
