--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="grid50">
+    <div class="border">
+        <h3>Lathes</h3>
+    </div>
+    <div class="border">
+        <h3>Mills</h3>
+    </div>
+</div>
