--- a/frontend/src/app/shared/home/home.component.css
+++ b/frontend/src/app/shared/home/home.component.css
@@ -1,4 +1,10 @@
 .grid50 { 
     display: grid;
     grid-template-columns: 50% 50%;
+    text-align: center;
+}
+
+.thin{
+    width: 80%;
+    margin: auto;
 }
