--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -1,8 +1,21 @@
-<div class="grid50">
-    <div class="border">
-        <h3>Lathes</h3>
+<div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="grid50">
+        <div class="border">
+            <h3>Lathes</h3>
+            <div class="border thin" *ngFor="let job of currentLatheJobs">
+                <h5>Job Number:<strong>{{job.jobNumber}}</strong></h5>
+                <h5 *ngIf="job.remainingQuantity">Production Remaining:<strong>{{job.remainingQuantity}}</strong></h5>
+                <h5 *ngIf="!job.remainingQuantity">Production Remaining:<strong>Unknown</strong></h5>
+            </div>
+        </div>
+        <div class="border">
+            <h3>Mills</h3>
+            <div class="border thin" *ngFor="let job of currentMillJobs">
+                <h5>Job Number:<strong>{{job.jobNumber}}</strong></h5>
+                <h5 *ngIf="job.remainingQuantity">Production Remaining:<strong>{{job.remainingQuantity}}</strong></h5>
+                <h5 *ngIf="!job.remainingQuantity">Production Remaining:<strong>Unknown</strong></h5>
+            </div>
+        </div>
     </div>
-    <div class="border">
-        <h3>Mills</h3>
-    </div>
+    <br><br>
 </div>
