added delivery date to frontend job new/edit/display

--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -20,6 +20,9 @@
         <h4 *ngIf="!oneJob.possibleQuantity && !oneJob.weightQuantity && oneJob.orderQuantity">
           Order Quantity: <br class="mobile"> <strong>{{oneJob.orderQuantity}}</strong>
         </h4>
+        <h4 *ngIf="oneJob.deliveryDate">
+          Delivery Date: <br class="mobile"> <strong>{{oneJob.deliveryDate}}</strong>
+        </h4>
         <h4 *ngIf="!oneJob.possibleQuantity && oneJob.weightQuantity">
           Possible Quantity: <br class="mobile"> <strong>{{oneJob.weightQuantity}}</strong>
         </h4>
