--- a/frontend/src/app/job/job-edit/job-edit.component.html
+++ b/frontend/src/app/job/job-edit/job-edit.component.html
@@ -13,6 +13,14 @@
       class="form-control">
   </div>
   <div class="form-group">
+    <h6 for="deliveryDate">Delivery Date (Optional)</h6>
+    <input 
+      formControlName='deliveryDate'
+      type="date" 
+      id="deliveryDate" 
+      class="form-control">
+  </div>
+  <div class="form-group">
     <h6 for="weightRecieved">Weight Recieved (Optional)</h6>
     <input 
       formControlName='weightRecieved'
