--- a/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
+++ b/frontend/src/app/job/job-find/job-find-show/job-find-show.component.html
@@ -32,6 +32,9 @@
         <h4 *ngIf="oneJob.remainingQuantity">
           Remaining Quantity: <br class="mobile"> <strong>{{oneJob.remainingQuantity}}</strong>
         </h4> 
+        <h4 *ngIf="oneJob.deliveryDate">
+          Delivery Date:<br><strong>{{job.deliveryDate}}</strong>
+        </h4>
         <br><br>
       </div>
       <div class="grid">
@@ -79,6 +82,9 @@
         <h4 *ngIf="job.remainingQuantity">
           Remaining Quantity: <strong>{{job.remainingQuantity}}</strong>
         </h4> 
+        <h4 *ngIf="job.deliveryDate">
+          Delivery Date:<br><strong>{{job.deliveryDate}}</strong>
+        </h4>
         <br><br>
       </div>
       <div class="grid">
