--- a/frontend/src/app/shared/welcome/welcome.component.html
+++ b/frontend/src/app/shared/welcome/welcome.component.html
@@ -2,6 +2,6 @@
 <h4>
   If this is your first time here, you can <a routerLink='/register'>sign up</a> and create a new account with the beta for free!
   <br><br>
-  If you already have an account, you can <a routerLink='/login'>sign in</a> here!
+  If you already have an account, you can <a routerLink='/login'>log in</a> here!
 </h4>
 <br>
