--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -2,14 +2,17 @@
     <div *ngIf="auth.user" class="grid50">
         <div class="border">
             <h3>Lathes</h3>
-            <div class="thin" *ngFor="let job of currentLatheJobs">
-                <div class="border grid50">
-                    <h6>Job Number:<br><strong>{{job.jobNumber}}</strong></h6>
-                    <h6 *ngIf="job.orderQuantity">Order Quantity:<br><strong>{{job.orderQuantity}}</strong></h6>
-                    <h6 *ngIf="!job.orderQuantity">Order Quantity:<br><strong>Unknown</strong></h6>
-                    <h6 *ngIf="job.remainingQuantity">Production Remaining:<br><strong>{{job.remainingQuantity}}</strong></h6>
-                    <h6 *ngIf="!job.remainingQuantity">Production Remaining:<br><strong>Unknown</strong></h6>
-                    <h6 *ngIf="job.deliveryDate">Delivery Date:<br><strong>{{job.deliveryDate}}</strong></h6>
+            <div class="thin" *ngFor="let set of currentLatheJobsWithMach">
+                <div class="border">
+                    <h6>Machine:<br><strong>{{set.machine}}</strong></h6>
+                    <div class="grid50">
+                        <h6>Job Number:<br><strong>{{set.job.jobNumber}}</strong></h6>
+                        <h6 *ngIf="set.job.orderQuantity">Order Quantity:<br><strong>{{set.job.orderQuantity}}</strong></h6>
+                        <h6 *ngIf="!set.job.orderQuantity">Order Quantity:<br><strong>Unknown</strong></h6>
+                        <h6 *ngIf="set.job.remainingQuantity">Production Remaining:<br><strong>{{set.job.remainingQuantity}}</strong></h6>
+                        <h6 *ngIf="!set.job.remainingQuantity">Production Remaining:<br><strong>Unknown</strong></h6>
+                        <h6 *ngIf="set.job.deliveryDate">Delivery Date:<br><strong>{{set.job.deliveryDate}}</strong></h6>
+                    </div>
                 </div>
                 <br>
             </div>
